--- a/config/database.yml
+++ b/config/database.yml
@@ -5,22 +5,22 @@
 #   gem 'sqlite3'
 #
 default: &default
-    adapter: mysql2
+    adapter: postgresql
     encoding: utf8
     database: appprodudb
-    username: root
+    username: postgres
     password: 
     host: 127.0.0.1
-    port: 3306
+    port: 5432
 
 development:
-    adapter: mysql2
+    adapter: postgresql
     encoding: utf8
     database: appprodudb
-    username: root
+    username: postgres
     password: 
     host: 127.0.0.1
-    port: 3306
+    port: 5432
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
